[package]
name = "refx-pp"
version = "0.5.0"
edition = "2021"
authors = ["MaxOhn <ohn.m@hotmail.de>", "remeliah <anoletenu@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/refx-online/refx-pp-rs"
description = "Difficulty and performance calculation for osu!"
keywords = ["osu", "pp", "stars", "performance", "difficulty"]

[features]
default = []
raw_strains = []
sync = []
tracing = ["rosu-map/tracing"]

[dependencies]
rust_decimal = "1.39"
rust_decimal_macros = "1.39"
rosu-map = { version = "0.2.1" }
rosu-mods = { version = "0.3.0" }

[dev-dependencies]
proptest = "1.6.0"

[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3